--- a/report/Rio_de_Janeiro/BoletimRio.tex
+++ b/report/Rio_de_Janeiro/BoletimRio.tex
@@ -10,7 +10,7 @@
 % Carregando dados  (atualmente é manual)
   
   \fancyfoot[C]{Boletim Municipal - Rio de Janeiro}
-\fancyfoot[R]{SE 34 de 2016}
+\fancyfoot[R]{SE 35 de 2016}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
 \usepackage{Sweave}
@@ -39,7 +39,7 @@
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 34 de 2016} % se, ano, em pp.RData
+\textbf{Semana 35 de 2016} % se, ano, em pp.RData
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
@@ -73,13 +73,13 @@
 %-------------------------------------------------------------------------------
   \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 100763 casos foram registrados no estado, sendo 63 na semana 34. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 101761 casos foram registrados no estado, sendo 98 na semana 35. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{../RJ/figs/Mapa_ERJ.png}
 %-----------------------------------------------------------
   
-  Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 34-2016. Para informações mais atualizadas
+  Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 35-2016. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -109,17 +109,17 @@ As cores indicam niveis de atenção
 %----------------------------------------------------------------------------------
   
 \begin{minipage}[t]{.66\linewidth}\hypertarget{regional}{\heading{Situação da Dengue na Regional Metropolitana I}{6pt}}\includegraphics[\width=8\textwidth]{../RJ/figs/MapaRJ_MetropolitanaI.png}\captionof{table}[tabregional]{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana I }\begin{center}\input{../RJ/figs/tabregionalRJ_MetropolitanaI.tex}\end{center}\small{\hyperlink{vartab}{ver descrição das variáveis}}\begin{center}\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana I }\includegraphics[width=1.3\textwidth]{../RJ/figs/tweetRJ_MetropolitanaI.png}\end{center}\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}\begin{mdframed}[style=sidebar,frametitle={}]\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Belford Roxo 
-\gsquare Duque de Caxias 
 \gsquare Itaguaí 
-\gsquare Japeri 
 \gsquare Magé 
 \gsquare Mesquita 
-\gsquare Nilópolis 
-\gsquare Nova Iguaçu 
 \gsquare Queimados 
 \gsquare Rio de Janeiro 
 \gsquare São João de Meriti 
-\gsquare Seropédica \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage  %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
+\gsquare Nova Iguaçu 
+\gsquare Seropédica 
+\gsquare Duque de Caxias 
+\gsquare Japeri 
+\gsquare Nilópolis \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage  %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE - PARTE PRINCIPAL - Municipio
 %-----------------------------------------------------------------------------------
 \begin{minipage}[t]{0.6\linewidth} % Mini page taking up 100% of the actual page
 \hypertarget{mun}{\heading{Situação da Dengue na Cidade do Rio de Janeiro: Mapa}{6pt}} % \hypertarget 
