--- a/report/RJ/BoletimEstadual_RJ.tex
+++ b/report/RJ/BoletimEstadual_RJ.tex
@@ -19,7 +19,7 @@
 % Carregando dados  (atualmente é manual para cada estado)
 
 \fancyfoot[C]{Boletim Estadual - Rio de Janeiro}
-\fancyfoot[R]{Semana 34 de 2016}
+\fancyfoot[R]{Semana 35 de 2016}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
 \usepackage{Sweave}
@@ -47,7 +47,7 @@
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 34 de 2016} % se, ano, em pp.RData
+\textbf{Semana 35 de 2016} % se, ano, em pp.RData
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
@@ -57,15 +57,15 @@
 \textbf{Regionais de Saúde:}
 
 
-\begin{itemize}\item \hyperlink{MtrI}{Metropolitana I}
-\item \hyperlink{MtII}{Metropolitana II}
-\item \hyperlink{LtrS}{Litoral Sul}
-\item \hyperlink{MdPr}{Médio Paraíba}
-\item \hyperlink{CntS}{Centro Sul}
-\item \hyperlink{Srrn}{Serrana}
+\begin{itemize}\item \hyperlink{LtrS}{Litoral Sul}
+\item \hyperlink{Nrst}{Noroeste}
 \item \hyperlink{BxdL}{Baixada Litorânea}
+\item \hyperlink{MdPr}{Médio Paraíba}
+\item \hyperlink{MtrI}{Metropolitana I}
+\item \hyperlink{Srrn}{Serrana}
 \item \hyperlink{Nort}{Norte}
-\item \hyperlink{Nrst}{Noroeste}\end{itemize}
+\item \hyperlink{CntS}{Centro Sul}
+\item \hyperlink{MtII}{Metropolitana II}\end{itemize}
 \textbf{Municípios:}
 
 \begin{itemize}
@@ -98,13 +98,13 @@
 %-------------------------------------------------------------------------------
 \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 100763 casos foram registrados no estado, sendo 63 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 101761 casos foram registrados no estado, sendo 98 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{figs/Mapa_ERJ.png}
 %-----------------------------------------------------------
 
-Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 34-2016. Para informações mais atualizadas
+Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 35-2016. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -134,44 +134,7 @@ As cores indicam niveis de atenção
 %----------------------------------------------------------------------------------
 
 \begin{minipage}[t]{.66\linewidth}
-\hypertarget{MtrI}{\heading{Regional Metropolitana I}}
-\includegraphics[width=0.8\textwidth]{figs/MapaRJ_MetropolitanaI.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana I }\begin{center}
-\input{figs/tabregionalRJ_MetropolitanaI.tex}
-\end{center}
-\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
-\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana I }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_MetropolitanaI.png}\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Belford Roxo 
-\gsquare Duque de Caxias 
-\gsquare Itaguaí 
-\gsquare Japeri 
-\gsquare Magé 
-\gsquare Mesquita 
-\gsquare Nilópolis 
-\gsquare Nova Iguaçu 
-\gsquare Queimados 
-\gsquare Rio de Janeiro 
-\gsquare São João de Meriti 
-\gsquare Seropédica 
-\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{MtII}{\heading{Regional Metropolitana II}}
-\includegraphics[width=0.8\textwidth]{figs/MapaRJ_MetropolitanaII.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana II }\begin{center}
-\input{figs/tabregionalRJ_MetropolitanaII.tex}
-\end{center}
-\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
-\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana II }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_MetropolitanaII.png}\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Itaboraí 
-\gsquare Maricá 
-\gsquare Niterói 
-\gsquare Rio Bonito 
-\gsquare São Gonçalo 
-\gsquare Silva Jardim 
-\gsquare Tanguá 
-\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{LtrS}{\heading{Regional Litoral Sul}}
+\hypertarget{LtrS}{\heading{Regional Litoral Sul}{6pt}}
 \includegraphics[width=0.8\textwidth]{figs/MapaRJ_LitoralSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Litoral Sul }\begin{center}
 \input{figs/tabregionalRJ_LitoralSul.tex}
 \end{center}
@@ -183,73 +146,30 @@ As cores indicam niveis de atenção
 \gsquare Mangaratiba 
 \gsquare Paraty 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{MdPr}{\heading{Regional Médio Paraíba}}
-\includegraphics[width=0.8\textwidth]{figs/MapaRJ_MedioParaiba.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Médio Paraíba }\begin{center}
-\input{figs/tabregionalRJ_MedioParaiba.tex}
+\hypertarget{Nrst}{\heading{Regional Noroeste}{6pt}}
+\includegraphics[width=0.8\textwidth]{figs/MapaRJ_Noroeste.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Noroeste }\begin{center}
+\input{figs/tabregionalRJ_Noroeste.tex}
 \end{center}
 \small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
-\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Médio Paraíba }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_MedioParaiba.png}\end{center}
+\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Noroeste }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_Noroeste.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Itatiaia 
-\gsquare Resende 
-\gsquare Porto Real 
-\gsquare Quatis 
-\gsquare Barra Mansa 
-\gsquare Volta Redonda 
-\gsquare Rio Claro 
-\gsquare Rio das Flores 
-\gsquare Valença 
-\gsquare Barra do Piraí 
-\gsquare Pinheiral 
-\gsquare Piraí 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Aperibé 
+\gsquare Italva 
+\gsquare Itaperuna 
+\gsquare Laje do Muriaé 
+\gsquare Miracema 
+\gsquare Natividade 
+\gsquare Porciúncula 
+\gsquare Varre-Sai 
+\gsquare Santo Antônio de Pádua 
+\gsquare São José de Ubá 
+\gsquare Bom Jesus do Itabapoana 
+\gsquare Cambuci 
+\gsquare Cardoso Moreira 
+\gsquare Itaocara 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{CntS}{\heading{Regional Centro Sul}}
-\includegraphics[width=0.8\textwidth]{figs/MapaRJ_CentroSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Centro Sul }\begin{center}
-\input{figs/tabregionalRJ_CentroSul.tex}
-\end{center}
-\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
-\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Centro Sul }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_CentroSul.png}\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Paracambi 
-\gsquare Mendes 
-\gsquare Engenheiro Paulo de Frontin 
-\gsquare Miguel Pereira 
-\gsquare Vassouras 
-\gsquare Paty do Alferes 
-\gsquare Paraíba do Sul 
-\gsquare Comendador Levy Gasparian 
-\gsquare Três Rios 
-\gsquare Areal 
-\gsquare Sapucaia 
-\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{Srrn}{\heading{Regional Serrana}}
-\includegraphics[width=0.8\textwidth]{figs/MapaRJ_Serrana.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Serrana }\begin{center}
-\input{figs/tabregionalRJ_Serrana.tex}
-\end{center}
-\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
-\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Serrana }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_Serrana.png}\end{center}
-\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
-\begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Petrópolis 
-\gsquare Teresópolis 
-\gsquare São José do Vale do Rio Preto 
-\gsquare Sumidouro 
-\gsquare Nova Friburgo 
-\gsquare Bom Jardim 
-\gsquare Cantagalo 
-\gsquare Carmo 
-\gsquare Duas Barras 
-\gsquare Macuco 
-\gsquare Cordeiro 
-\gsquare Trajano de Moraes 
-\gsquare Santa Maria Madalena 
-\gsquare São Sebastião do Alto 
-\gsquare Guapimirim 
-\gsquare Cachoeiras de Macacu 
-\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{BxdL}{\heading{Regional Baixada Litorânea}}
+\hypertarget{BxdL}{\heading{Regional Baixada Litorânea}{6pt}}
 \includegraphics[width=0.8\textwidth]{figs/MapaRJ_BaixadaLitoranea.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Baixada Litorânea }\begin{center}
 \input{figs/tabregionalRJ_BaixadaLitoranea.tex}
 \end{center}
@@ -262,12 +182,79 @@ As cores indicam niveis de atenção
 \gsquare Arraial do Cabo 
 \gsquare Cabo Frio 
 \gsquare Casimiro de Abreu 
-\gsquare Iguaba Grande 
-\gsquare Rio das Ostras 
 \gsquare São Pedro da Aldeia 
 \gsquare Saquarema 
+\gsquare Rio das Ostras 
+\gsquare Iguaba Grande 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{Nort}{\heading{Regional Norte}}
+\hypertarget{MdPr}{\heading{Regional Médio Paraíba}{6pt}}
+\includegraphics[width=0.8\textwidth]{figs/MapaRJ_MedioParaiba.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Médio Paraíba }\begin{center}
+\input{figs/tabregionalRJ_MedioParaiba.tex}
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
+\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Médio Paraíba }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_MedioParaiba.png}\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Barra Mansa 
+\gsquare Itatiaia 
+\gsquare Pinheiral 
+\gsquare Porto Real 
+\gsquare Rio Claro 
+\gsquare Rio das Flores 
+\gsquare Piraí 
+\gsquare Quatis 
+\gsquare Resende 
+\gsquare Valença 
+\gsquare Volta Redonda 
+\gsquare Barra do Piraí 
+\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{MtrI}{\heading{Regional Metropolitana I}{6pt}}
+\includegraphics[width=0.8\textwidth]{figs/MapaRJ_MetropolitanaI.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana I }\begin{center}
+\input{figs/tabregionalRJ_MetropolitanaI.tex}
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
+\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana I }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_MetropolitanaI.png}\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Belford Roxo 
+\gsquare Itaguaí 
+\gsquare Magé 
+\gsquare Mesquita 
+\gsquare Queimados 
+\gsquare Rio de Janeiro 
+\gsquare São João de Meriti 
+\gsquare Nova Iguaçu 
+\gsquare Seropédica 
+\gsquare Duque de Caxias 
+\gsquare Japeri 
+\gsquare Nilópolis 
+\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{Srrn}{\heading{Regional Serrana}{6pt}}
+\includegraphics[width=0.8\textwidth]{figs/MapaRJ_Serrana.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Serrana }\begin{center}
+\input{figs/tabregionalRJ_Serrana.tex}
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
+\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Serrana }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_Serrana.png}\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Bom Jardim 
+\gsquare Cachoeiras de Macacu 
+\gsquare Cantagalo 
+\gsquare Carmo 
+\gsquare Duas Barras 
+\gsquare Guapimirim 
+\gsquare Nova Friburgo 
+\gsquare Petrópolis 
+\gsquare Santa Maria Madalena 
+\gsquare São José do Vale do Rio Preto 
+\gsquare Sumidouro 
+\gsquare Teresópolis 
+\gsquare Trajano de Moraes 
+\gsquare São Sebastião do Alto 
+\gsquare Cordeiro 
+\gsquare Macuco 
+\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{Nort}{\heading{Regional Norte}{6pt}}
 \includegraphics[width=0.8\textwidth]{figs/MapaRJ_Norte.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Norte }\begin{center}
 \input{figs/tabregionalRJ_Norte.tex}
 \end{center}
@@ -275,37 +262,50 @@ As cores indicam niveis de atenção
 \captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Norte }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_Norte.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Macaé 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Carapebus 
 \gsquare Conceição de Macabu 
-\gsquare Carapebus 
+\gsquare Macaé 
 \gsquare Quissamã 
-\gsquare São Fidélis 
-\gsquare Campos dos Goytacazes 
-\gsquare São João da Barra 
 \gsquare São Francisco de Itabapoana 
+\gsquare São Fidélis 
+\gsquare São João da Barra 
+\gsquare Campos dos Goytacazes 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
-\hypertarget{Nrst}{\heading{Regional Noroeste}}
-\includegraphics[width=0.8\textwidth]{figs/MapaRJ_Noroeste.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Noroeste }\begin{center}
-\input{figs/tabregionalRJ_Noroeste.tex}
+\hypertarget{CntS}{\heading{Regional Centro Sul}{6pt}}
+\includegraphics[width=0.8\textwidth]{figs/MapaRJ_CentroSul.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Centro Sul }\begin{center}
+\input{figs/tabregionalRJ_CentroSul.tex}
 \end{center}
 \small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
-\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Noroeste }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_Noroeste.png}\end{center}
+\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Centro Sul }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_CentroSul.png}\end{center}
 \end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
 \begin{mdframed}[style=sidebar,frametitle={}]
-\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Aperibé 
-\gsquare Bom Jesus do Itabapoana 
-\gsquare Cambuci 
-\gsquare Italva 
-\gsquare Itaocara 
-\gsquare Itaperuna 
-\gsquare Laje do Muriaé 
-\gsquare Miracema 
-\gsquare Natividade 
-\gsquare Porciúncula 
-\gsquare Santo Antônio de Pádua 
-\gsquare São José de Ubá 
-\gsquare Varre-Sai 
-\gsquare Cardoso Moreira 
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Comendador Levy Gasparian 
+\gsquare Engenheiro Paulo de Frontin 
+\gsquare Mendes 
+\gsquare Paracambi 
+\gsquare Paraíba do Sul 
+\gsquare Sapucaia 
+\gsquare Três Rios 
+\gsquare Vassouras 
+\gsquare Paty do Alferes 
+\gsquare Areal 
+\gsquare Miguel Pereira 
+\end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage\begin{minipage}[t]{.66\linewidth}
+\hypertarget{MtII}{\heading{Regional Metropolitana II}{6pt}}
+\includegraphics[width=0.8\textwidth]{figs/MapaRJ_MetropolitanaII.png}\vspace{0.5cm}\captionof{table}{Resumo das últimas seis semanas epidemiológicas na Regional Metropolitana II }\begin{center}
+\input{figs/tabregionalRJ_MetropolitanaII.tex}
+\end{center}
+\small{\hyperlink{vartab}{ver descrição das variáveis}}\vspace{0.5cm}\begin{center}
+\captionof{figure}{Casos notificados de dengue e Índice de menção em midia social sobre dengue na Regional Metropolitana II }\includegraphics[width=1.3\textwidth]{figs/tweetRJ_MetropolitanaII.png}\end{center}
+\end{minipage}\hfill\begin{minipage}[t]{.30\linewidth}
+\begin{mdframed}[style=sidebar,frametitle={}]
+\textbf{\hyperlink{municips}{Municipios}}\begin{itemize}\gsquare Itaboraí 
+\gsquare Niterói 
+\gsquare Rio Bonito 
+\gsquare Silva Jardim 
+\gsquare São Gonçalo 
+\gsquare Tanguá 
+\gsquare Maricá 
 \end{itemize}\BackToContents\end{mdframed}\hfill\end{minipage}\newpage
 
 %-----------------------------------------------------------------------------------%	MAIN BODY - THIRD PAGE
@@ -313,7 +313,7 @@ As cores indicam niveis de atenção
  %\begin{minipage}[t]{1\linewidth} % Mini page taking up 100% of the actual page
 
  
-      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Rio de Janeiro, na semana 34 de 2016}{6pt}}
+      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Rio de Janeiro, na semana 35 de 2016}{6pt}}
 
 
      \begin{center}
@@ -332,7 +332,7 @@ As cores indicam niveis de atenção
 
 \begin{minipage}[t]{1\linewidth} 
 
-\hypertarget{vartab}{\heading{Lista das variáveis apresentadas nas tabelas:}}
+\hypertarget{vartab}{\heading{Lista das variáveis apresentadas nas tabelas:}{6pt}}
 
 \begin{description}
 \item [SE =] semana epidemiológica
@@ -348,7 +348,7 @@ As cores indicam niveis de atenção
 \item [Nivel =] cor do alerta (verde, amarelo, laranja, vermelho)
 \end{description}
 
-\hypertarget{notas}{\heading{Notas}}
+\hypertarget{notas}{\heading{Notas}{6pt}}
 
 \begin{itemize}
 \item Os dados do sinan mais recentes ainda não foram totalmente digitados. Estimamos o número esperado de casos notificados considerando o tempo até os casos serem digitados.
@@ -356,7 +356,7 @@ As cores indicam niveis de atenção
 \item Algumas vezes, os casos da última semana ainda não estao disponíveis, nesse caso, usa-se uma estimação com base na tendência de variação da série.
 \end{itemize}
 
-\hypertarget{creditos}{\heading{Créditos}}
+\hypertarget{creditos}{\heading{Créditos}{6pt}}
 
 Este é um projeto desenvolvido com apoio da SVS/MS em parceria com:
 
@@ -372,7 +372,7 @@ Este é um projeto desenvolvido com apoio da SVS/MS em parceria com:
 
 \vspace{1cm}
 
-\hline
+\hrule
 Para mais detalhes sobre o sistema de alerta InfoDengue, consultar: \url{http://info.dengue.mat.br}\\
 
 \textbf{Contato}: \href{alerta\_dengue@fiocruz.br}{\nolinkurl{alerta\_dengue@fiocruz.br} }
