--- a/report/Rio_de_Janeiro/BoletimRio.Rnw
+++ b/report/Rio_de_Janeiro/BoletimRio.Rnw
@@ -320,7 +320,7 @@ cat('\\begin{center}\n')
     
     \begin{minipage}[t]{1\linewidth} 
   
-  \hypertarget{vartab}{\heading{Lista das variáveis apresentadas nas tabelas:}}
+  \hypertarget{vartab}{\heading{Lista das variáveis apresentadas nas tabelas:}{6pt}}
   
   \begin{description}
   \item [SE =] semana epidemiológica
@@ -336,7 +336,7 @@ cat('\\begin{center}\n')
   \item [Nivel =] cor do alerta (verde, amarelo, laranja, vermelho)
   \end{description}
   
-  \hypertarget{notas}{\heading{Notas}}
+  \hypertarget{notas}{\heading{Notas}{6pt}}
   
   \begin{itemize}
   \item Os dados do sinan mais recentes ainda não foram totalmente digitados. Estimamos o número esperado de casos notificados considerando o tempo até os casos serem digitados.
@@ -344,7 +344,7 @@ cat('\\begin{center}\n')
   \item Algumas vezes, os casos da última semana ainda não estao disponíveis, nesse caso, usa-se uma estimação com base na tendência de variação da série.
   \end{itemize}
   
-  \hypertarget{creditos}{\heading{Créditos}}
+  \hypertarget{creditos}{\heading{Créditos}{6pt}}
   
   Este é um projeto desenvolvido com apoio da SVS/MS em parceria com:
     
