--- a/report/Rio_de_Janeiro/BoletimRio.tex
+++ b/report/Rio_de_Janeiro/BoletimRio.tex
@@ -73,13 +73,13 @@
 %-------------------------------------------------------------------------------
   \hypertarget{estado}{\heading{Situação da Dengue no Estado do Rio de Janeiro}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 100763 casos foram registrados no estado, sendo 63 na semana 34. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 99675 casos foram registrados no estado, sendo 119 na semana 32. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{../RJ/figs/Mapa_ERJ.png}
 %-----------------------------------------------------------
   
-  Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 34-2016. Para informações mais atualizadas
+  Dos 92 municipios, 92 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 32-2016. Para informações mais atualizadas
 sobre o município do Rio de Janeiro ter acesso ao mapa interativo do estado consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
@@ -99,7 +99,7 @@ As cores indicam niveis de atenção
 \end{description}
 \end{mdframed}
 
-\textbf{Na semana passada:} 0 municípios em nivel amarelo, 0 em laranja e 0 em vermelho.  
+\textbf{Na semana passada:} 1 municípios em nivel amarelo, 0 em laranja e 0 em vermelho.  
 
 \end{minipage} % End the main body - first page mini page
 
@@ -236,7 +236,7 @@ nas Áreas Programáticas de Saúde}\begin{center}\captionof{table}{APS 3.3 }
     
     \begin{minipage}[t]{1\linewidth} 
   
-  \hypertarget{vartab}{\heading{Lista das variáveis apresentadas nas tabelas:}}
+  \hypertarget{vartab}{\heading{Lista das variáveis apresentadas nas tabelas:}{6pt}}
   
   \begin{description}
   \item [SE =] semana epidemiológica
@@ -252,7 +252,7 @@ nas Áreas Programáticas de Saúde}\begin{center}\captionof{table}{APS 3.3 }
   \item [Nivel =] cor do alerta (verde, amarelo, laranja, vermelho)
   \end{description}
   
-  \hypertarget{notas}{\heading{Notas}}
+  \hypertarget{notas}{\heading{Notas}{6pt}}
   
   \begin{itemize}
   \item Os dados do sinan mais recentes ainda não foram totalmente digitados. Estimamos o número esperado de casos notificados considerando o tempo até os casos serem digitados.
@@ -260,7 +260,7 @@ nas Áreas Programáticas de Saúde}\begin{center}\captionof{table}{APS 3.3 }
   \item Algumas vezes, os casos da última semana ainda não estao disponíveis, nesse caso, usa-se uma estimação com base na tendência de variação da série.
   \end{itemize}
   
-  \hypertarget{creditos}{\heading{Créditos}}
+  \hypertarget{creditos}{\heading{Créditos}{6pt}}
   
   Este é um projeto desenvolvido com apoio da SVS/MS em parceria com:
     
