Teste Regional Cascavel

--- a/report/PR/Regionais/Cascavel/figs/tabelaoPR.tex
+++ b/report/PR/Regionais/Cascavel/figs/tabelaoPR.tex
@@ -1,5 +1,5 @@
-% latex table generated in R 3.3.0 by xtable 1.8-2 package
-% Tue Aug 30 15:00:01 2016
+% latex table generated in R 3.3.1 by xtable 1.8-2 package
+% Fri Sep  9 09:43:02 2016
 \begin{longtable}{l|lllllll}
   \hline
 Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\ 
@@ -9,30 +9,30 @@ Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\
 {\footnotesize Continua na próxima página}
 \endfoot
 \endlastfoot
-Anahy & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Boa Vista da Aparecida & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Braganey & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cafelândia & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Campo Bonito & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Capitão Leônidas Marques & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Cascavel & Cascavel & 16.3 & 0 & 12 & 5.5 & 1.1 & verde \\ 
-  Catanduvas & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Céu Azul & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Corbélia & Cascavel & 16.3 & 0 & 1 & 5.9 & 2.9 & verde \\ 
-  Diamante do Sul & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Espigão Alto do Iguaçu & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Formosa do Oeste & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Guaraniaçu & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Ibema & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Iguatu & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Iracema do Oeste & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Jesuítas & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Lindoeste & Cascavel & 16.3 & 0 & 1 & 19.1 & 12.1 & verde \\ 
-  Nova Aurora & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Quedas do Iguaçu & Cascavel & 16.3 & 0 & 1 & 3.1 & 12.1 & verde \\ 
-  Santa Lúcia & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Santa Tereza do Oeste & Cascavel & 16.3 & 0 & 0 & 0.0 & 0.0 & verde \\ 
-  Três Barras do Paraná & Cascavel & 16.3 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Vera Cruz do Oeste & Cascavel & 16.3 &  & 1 & 11.1 & 2.5 & verde \\ 
+Céu Azul & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Corbélia & Cascavel & 15.4 &  & 1 & 5.9 & 2.4 & verde \\ 
+  Formosa do Oeste & Cascavel & 15.4 &  & 1 & 13.5 & 12.1 & verde \\ 
+  Iguatu & Cascavel & 15.4 &  & 1 & 43.5 & 12.1 & verde \\ 
+  Iracema do Oeste & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Aurora & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Santa Tereza do Oeste & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Três Barras do Paraná & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Boa Vista da Aparecida & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Braganey & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cafelândia & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Campo Bonito & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Capitão Leônidas Marques & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cascavel & Cascavel & 15.4 &  & 9 & 3.9 & 0.9 & verde \\ 
+  Catanduvas & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Diamante do Sul & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Espigão Alto do Iguaçu & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Guaraniaçu & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Ibema & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Jesuítas & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Lindoeste & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Quedas do Iguaçu & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Santa Lúcia & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Vera Cruz do Oeste & Cascavel & 15.4 &  & 1 & 11.1 & 1.1 & verde \\ 
+  Anahy & Cascavel & 15.4 &  & 0 & 0.0 & 0.0 & verde \\ 
   \hline
 \end{longtable}
