--- a/report/RJ/figs/tabelaoRJ.tex
+++ b/report/RJ/figs/tabelaoRJ.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.1 by xtable 1.8-2 package
-% Tue Sep  6 10:49:24 2016
+% Tue Sep 13 09:54:46 2016
 \begin{longtable}{l|lllllll}
   \hline
 Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\ 
@@ -9,97 +9,97 @@ Municipio & Regional & Temperatura & Tweets & Casos & Incidencia & Rt & Nivel \\
 {\footnotesize Continua na próxima página}
 \endfoot
 \endlastfoot
-Angra dos Reis & Litoral Sul & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Aperibé & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
+Angra dos Reis & Litoral Sul &  &  & 9 & 5.4 & 0.8 & verde \\ 
+  Aperibé & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
   Araruama & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Areal & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Areal & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
   Armação dos Búzios & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Arraial do Cabo & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Barra do Piraí & Médio Paraíba & 17.2 &  & 55 & 117.0 & 4.2 & verde \\ 
-  Barra Mansa & Médio Paraíba & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Belford Roxo & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jardim & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Bom Jesus do Itabapoana & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cabo Frio & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cachoeiras de Macacu & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cambuci & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Campos dos Goytacazes & Norte & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cantagalo & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Carapebus & Norte & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cardoso Moreira & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Carmo & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Casimiro de Abreu & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Comendador Levy Gasparian & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Conceição de Macabu & Norte & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Cordeiro & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Duas Barras & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Duque de Caxias & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Engenheiro Paulo de Frontin & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Guapimirim & Serrana & 21.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Iguaba Grande & Baixada Litorânea &  &  & 1 & 3.9 & 11.9 & verde \\ 
-  Itaboraí & Metropolitana II & 21.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaguaí & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Italva & Noroeste & 20.4 &  & 1 & 6.9 & 0.9 & verde \\ 
-  Itaocara & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itaperuna & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Itatiaia & Médio Paraíba & 17.2 &  & 1 & 3.3 & 1.1 & verde \\ 
-  Japeri & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Laje do Muriaé & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Macaé & Norte & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Macuco & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Magé & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mangaratiba & Litoral Sul & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Maricá & Metropolitana II & 21.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mendes & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Mesquita & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Miguel Pereira & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Miracema & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Natividade & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nilópolis & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Niterói & Metropolitana II & 21.2 &  & 2 & 0.8 & 2.4 & verde \\ 
-  Nova Friburgo & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Nova Iguaçu & Metropolitana I & 19.0 &  & 2 & 0.5 & 1.1 & verde \\ 
-  Paracambi & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paraíba do Sul & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paraty & Litoral Sul & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Paty do Alferes & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Petrópolis & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Pinheiral & Médio Paraíba & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Piraí & Médio Paraíba & 19.4 &  & 2 & 10.9 & 10.8 & verde \\ 
-  Porciúncula & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Porto Real & Médio Paraíba & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quatis & Médio Paraíba & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Queimados & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Quissamã & Norte & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Resende & Médio Paraíba & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Bonito & Metropolitana II & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio Claro & Médio Paraíba & 19.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio das Flores & Médio Paraíba & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Arraial do Cabo & Baixada Litorânea & 21.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Barra do Piraí & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Barra Mansa & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Belford Roxo & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jardim & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Bom Jesus do Itabapoana & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cabo Frio & Baixada Litorânea & 21.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cachoeiras de Macacu & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cambuci & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Campos dos Goytacazes & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cantagalo & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Carapebus & Norte &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Cardoso Moreira & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Carmo & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Casimiro de Abreu & Baixada Litorânea & 21.7 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Comendador Levy Gasparian & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Conceição de Macabu & Norte &  &  & 1 & 4.5 & 3.1 & verde \\ 
+  Cordeiro & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Duas Barras & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Duque de Caxias & Metropolitana I & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Engenheiro Paulo de Frontin & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Guapimirim & Serrana & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Iguaba Grande & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaboraí & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaguaí & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Italva & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaocara & Noroeste &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itaperuna & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Itatiaia & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Japeri & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Laje do Muriaé & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Macaé & Norte &  &  & 5 & 4.8 & 1.0 & verde \\ 
+  Macuco & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Magé & Metropolitana I & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mangaratiba & Litoral Sul &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Maricá & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mendes & Centro Sul &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Mesquita & Metropolitana I & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Miguel Pereira & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Miracema & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Natividade & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Nilópolis & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Niterói & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Friburgo & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Nova Iguaçu & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paracambi & Centro Sul &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paraíba do Sul & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Paraty & Litoral Sul &  &  & 1 & 2.5 & 0.5 & verde \\ 
+  Paty do Alferes & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Petrópolis & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Pinheiral & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Piraí & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Porciúncula & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Porto Real & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Quatis & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Queimados & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Quissamã & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Resende & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Bonito & Metropolitana II &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio Claro & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio das Flores & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
   Rio das Ostras & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Rio de Janeiro & Metropolitana I & 19.0 &  & 32 & 1.4 & 0.8 & verde \\ 
-  Santa Maria Madalena & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Santo Antônio de Pádua & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Fidélis & Norte & 20.4 &  & 1 & 2.7 & 6.0 & verde \\ 
-  São Francisco de Itabapoana & Norte & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Gonçalo & Metropolitana II & 21.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São João da Barra & Norte & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São João de Meriti & Metropolitana I & 21.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São José de Ubá & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  São José do Vale do Rio Preto & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Rio de Janeiro & Metropolitana I &  &  & 25 & 1.1 & 0.7 & verde \\ 
+  Santa Maria Madalena & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Santo Antônio de Pádua & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Fidélis & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Francisco de Itabapoana & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Gonçalo & Metropolitana II & 21.3 &  & 3 & 0.6 & 0.4 & verde \\ 
+  São João da Barra & Norte & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São João de Meriti & Metropolitana I & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São José de Ubá & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São José do Vale do Rio Preto & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
   São Pedro da Aldeia & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  São Sebastião do Alto & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Sapucaia & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
+  São Sebastião do Alto & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Sapucaia & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
   Saquarema & Baixada Litorânea &  &  & 0 & 0.0 & 0.0 & verde \\ 
-  Seropédica & Metropolitana I & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Silva Jardim & Metropolitana II & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Sumidouro & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Tanguá & Metropolitana II & 21.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Teresópolis & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Trajano de Moraes & Serrana & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Três Rios & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Valença & Médio Paraíba & 17.2 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Varre-Sai & Noroeste & 20.4 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Vassouras & Centro Sul & 19.0 &  & 0 & 0.0 & 0.0 & verde \\ 
-  Volta Redonda & Médio Paraíba & 17.2 &  & 1 & 0.4 & 0.6 & verde \\ 
+  Seropédica & Metropolitana I &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Silva Jardim & Metropolitana II &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Sumidouro & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Tanguá & Metropolitana II & 21.3 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Teresópolis & Serrana & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Trajano de Moraes & Serrana &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Três Rios & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Valença & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
+  Varre-Sai & Noroeste & 22.1 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Vassouras & Centro Sul & 20.6 &  & 0 & 0.0 & 0.0 & verde \\ 
+  Volta Redonda & Médio Paraíba &  &  & 0 & 0.0 & 0.0 & verde \\ 
   \hline
 \end{longtable}
