--- a/report/PR/BoletimEstadual_InfoDengue_EPR.tex
+++ b/report/PR/BoletimEstadual_InfoDengue_EPR.tex
@@ -19,7 +19,7 @@
 % Carregando dados  (atualmente é manual para cada estado)
 
 \fancyfoot[C]{Boletim Estadual - Paraná}
-\fancyfoot[R]{Semana 33 de 2016}
+\fancyfoot[R]{Semana 36 de 2016}
 \fancyfoot[L]{\href{http://info.dengue.mat.br}{InfoDengue}}
 
 \usepackage{Sweave}
@@ -47,7 +47,7 @@
 
 \hypertarget{contents}{\textbf{{\large Boletim Semanal}}} 
 
-\textbf{Semana 33 de 2016} % se, ano, em pp.RData
+\textbf{Semana 36 de 2016} % se, ano, em pp.RData
 
 \begin{itemize}
 \item \hyperlink{estado}{O Estado} 
@@ -111,13 +111,13 @@
 %-------------------------------------------------------------------------------
 \hypertarget{estado}{\heading{Situação da Dengue no Estado do Paraná}{6pt}} % \hypertarget provides a label to reference using 
 
-Desde o início do ano, 190701 casos foram registrados no estado, sendo 217 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
+Desde o início do ano, 192004 casos foram registrados no estado, sendo 15 na última semana. A figura abaixo mostra as condições de transmissão em cada município.
 
 % Mapa estadual
 \includegraphics[width=0.8\textwidth]{figs/Mapa_EPR.png}
 %-----------------------------------------------------------
 
-Dos 399 municipios, 399 encontram-se em nivel verde, 0 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 33-2016. Para informações mais atualizadas e acesso ao mapa interativo de outras localidads consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
+Dos 399 municipios, 398 encontram-se em nivel verde, 1 em nivel amarelo, 0 em nivel laranja e 0 em nivel vermelho referentes a semana epidemiológica 36-2016. Para informações mais atualizadas e acesso ao mapa interativo de outras localidads consultar em \href{http://info.dengue.mat.br}{\textit{Info Dengue}}.
 
 
 %--------------------------------------------------------------------------------
@@ -136,7 +136,7 @@ As cores indicam niveis de atenção
 \end{description}
 \end{mdframed}
 
- \textbf{Na semana passada:} 0 municípios em nivel amarelo, 0 em laranja e 0 em vermelho.    
+ \textbf{Na semana passada:} 1 municípios em nivel amarelo, 0 em laranja e 0 em vermelho.    
 
 \end{minipage} % End the main body - first page mini page
 
@@ -492,7 +492,7 @@ As cores indicam niveis de atenção
 \gsquare Florestópolis 
 \gsquare Guaraci 
 \gsquare Jaguapitã 
-\gsquare Jataizinho 
+\ysquare Jataizinho 
 \gsquare Londrina 
 \gsquare Miraselva 
 \gsquare Pitangueiras 
@@ -749,7 +749,7 @@ As cores indicam niveis de atenção
  %\begin{minipage}[t]{1\linewidth} % Mini page taking up 100% of the actual page
 
  
-      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Paraná, na semana 33 de 2016}{6pt}}
+      \hypertarget{municips}{\heading{Resumo da situação epidemiológica da dengue nos municípios de Paraná, na semana 36 de 2016}{6pt}}
 
       
      \begin{center}
